<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textAppearance="@style/Headline"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="28dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TitleMedium"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/example_gmail"
        android:textAppearance="@style/BodyMedium"
        android:inputType="textEmailAddress"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._-"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="11dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/TitleMedium"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_password"
        android:textAppearance="@style/BodyMedium"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="11dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/enter"
        android:textAppearance="@style/Button"
        android:enabled="false"
        style ="@drawable/btn_background_selector"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textAppearance="@style/ButtonSmall"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/registration"
            android:textAppearance="@style/ButtonSmall"
            android:textColor="@color/green"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/forget_password"
        android:textColor="@color/green"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:textAppearance="@style/ButtonSmall"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/vkButton"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_vk_icon"
            android:background="@drawable/vk_btn_background"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/okButton"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_ok_icon"
            android:background="@drawable/ok_btn_background"
            android:scaleType="centerInside"/>

    </LinearLayout>

</LinearLayout>